--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,13 +1,12 @@
-body {
-  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/selga.png");
+
+
+.items {
+    background-image: url("C:/Users/FreddyPC/Documents/Web_Design_Class/Broadway Design/Resources/Images/the-flatiron-building.png");
+    text-align: center;
+    color: white;
 }
 
-h1 {
-    background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/pattern.jpeg);
-    text-align: center;
-    font-size: 100px;
-    color: Khaki;
-}
+
 
 h2 {
   color: DarkGreen;
