--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,25 +1,17 @@
 
-
-.items {
-    background-image: url("C:/Users/FreddyPC/Documents/Web_Design_Class/Broadway Design/Resources/Images/the-flatiron-building.png");
+body {
     text-align: center;
-    color: white;
+
+    }
+
+.items{
+  background-image: url("C:/Users/FreddyPC/Documents/Web_Design_Class/Broadway Design/Resources/Images/the-flatiron-building.png");
 }
 
-
-
-h2 {
-  color: DarkGreen;
-}
-
-p, h3 {
+p {
   font-family: Helvetica;
 }
 
-h1, h2 {
-    font-family: Helvetica;
-    text-align: center;
-}
 
 h3 {
     font-weight: bold;
