--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,50 +1,42 @@
 
 body {
     text-align: center;
-
+    font-family: Helvetica;
     }
+
+h1 {
+  font-size: 70px;
+  }
+
+ul {
+  font-size: 18px;
+}
+
+h4 {
+  font-size: 25px;
+  font-weight: bold;
+}
 
 .items{
   background-image: url("C:/Users/FreddyPC/Documents/Web_Design_Class/Broadway Design/Resources/Images/the-flatiron-building.png");
+  font-family: Helvetica;
+  font-weight: bold;
+  color: white;
 }
 
 p {
   font-family: Helvetica;
 }
 
-
 h3 {
     font-weight: bold;
   }
 
-.bruches{
-font-family: Helvetica;
-font-size: 32px;
-font-weight: bold;
-color: white;
-background-color: green;
-}
-
-.price {
-    color: Blue;
-    font-weight: bold;
-}
-
-.frames{
-font-family: Helvetica;
-font-size: 32px;
-font-weight: bold;
-color: white;
-background-color: LightCoral;
-}
-
-.paint{
-font-family: Helvetica;
-font-size: 32px;
-font-weight: bold;
-color: white;
-background-color: SkyBlue;
-}
+.footer {
+      background-color: dimgray;
+      font-size: 25px;
+      color: white;
+  }
 /* {
   font-family: Helvetica, Arial, sans-serif;
 }
