Footer Align Left.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -36,6 +36,7 @@ h3 {
       background-color: dimgray;
       font-size: 25px;
       color: white;
+      text-align: left;
   }
 /* {
   font-family: Helvetica, Arial, sans-serif;
